test/sema/increment-of-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def foo(i: int*) {
    // CHECK: [[@LINE+1]]:9: error: cannot increment immutable value
    (*i)++;
}
